fix completion in multi-scope projects (use getOriginalFile())